[gd_scene load_steps=8 format=2]

[ext_resource path="res://BaseEntity.gd" type="Script" id=1]
[ext_resource path="res://Assets/Round.png" type="Texture" id=2]
[ext_resource path="res://Assets/energy_small.png" type="Texture" id=3]
[ext_resource path="res://Assets/faeria.png" type="Texture" id=4]
[ext_resource path="res://abilities/current/Movement/Move.tscn" type="PackedScene" id=5]
[ext_resource path="res://abilities/current/Attacks/standardAttack.tscn" type="PackedScene" id=6]
[ext_resource path="res://abilities/current/clock/time-property.tscn" type="PackedScene" id=7]

[node name="Unit" type="Node2D"]
position = Vector2( 30, 30 )
script = ExtResource( 1 )
base_attack = 2
base_val = 0
COLOR_GREATER = Color( 0, 0.824219, 0.0128784, 1 )
COLOR_LESS = Color( 0.828125, 0, 0, 1 )
ENERGY_ACTIVE = Color( 0, 1, 0.554688, 1 )
ENERGY_INACTIVE = Color( 0.652344, 0.642151, 0.642151, 1 )
is_unit = true
move = true
collect = true
attack = true
on_clock = true

[node name="Frame" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Energy" type="Node2D" parent="."]
editor/display_folded = true

[node name="1" type="Sprite" parent="Energy"]
modulate = Color( 0, 1, 0.601563, 1 )
position = Vector2( 23.3951, -31.9015 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="2" type="Sprite" parent="Energy"]
modulate = Color( 0, 1, 0.601563, 1 )
position = Vector2( 14.8601, -31.7755 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="3" type="Sprite" parent="Energy"]
modulate = Color( 0, 1, 0.601563, 1 )
position = Vector2( 6.61169, -31.8385 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="4" type="Sprite" parent="Energy"]
modulate = Color( 0, 1, 0.601563, 1 )
position = Vector2( -1.81149, -32.0133 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="5" type="Sprite" parent="Energy"]
modulate = Color( 0, 1, 0.601563, 1 )
position = Vector2( -9.87086, -32.0133 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Faeria" type="Node2D" parent="."]
editor/display_folded = true

[node name="1" type="Sprite" parent="Faeria"]
visible = false
position = Vector2( -11.8913, -7.37262 )
texture = ExtResource( 4 )

[node name="2" type="Sprite" parent="Faeria"]
visible = false
position = Vector2( 8.08611, -16.6478 )
texture = ExtResource( 4 )

[node name="3" type="Sprite" parent="Faeria"]
visible = false
position = Vector2( 11.6535, 3.80522 )
texture = ExtResource( 4 )

[node name="Unit" type="Node2D" parent="."]
editor/display_folded = true

[node name="A" type="Label" parent="Unit"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -13.0
margin_top = 12.0
margin_right = 27.0
margin_bottom = 26.0
text = "A"

[node name="div" type="Label" parent="Unit"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -2.0
margin_top = 12.0
margin_right = 38.0
margin_bottom = 26.0
text = "/"

[node name="H" type="Label" parent="Unit"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 5.0
margin_top = 12.0
margin_right = 45.0
margin_bottom = 26.0
text = "H"

[node name="Building" type="Node2D" parent="."]
editor/display_folded = true

[node name="Val" type="Label" parent="Building"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -9.0
margin_top = 12.0
margin_right = 31.0
margin_bottom = 26.0
text = "Val"

[node name="Movement" type="Node" parent="."]

[node name="Move" parent="Movement" instance=ExtResource( 5 )]

[node name="Attack" type="Node" parent="."]

[node name="standardAttack" parent="Attack" instance=ExtResource( 6 )]

[node name="Abilities" type="Node" parent="."]

[node name="on_play" type="Node" parent="."]

[node name="on_attack" type="Node" parent="."]

[node name="on_move" type="Node" parent="."]

[node name="on_collect" type="Node" parent="."]

[node name="on_damage" type="Node" parent="."]

[node name="on_death" type="Node" parent="."]

[node name="on_clock" type="Node" parent="."]

[node name="time-property" parent="on_clock" instance=ExtResource( 7 )]
morning = {

}
evening = {
"is_attackable": false
}
night = {
"is_attackable": false
}

[node name="on_action" type="Node" parent="."]

[node name="on_production" type="Node" parent="."]

[node name="on_end_turn" type="Node" parent="."]

[node name="on_receive_attack" type="Node" parent="."]

